2008-05-14  Andres G. Aragoneses <aaragoneses@novell.com> 

	* atk/Object.custom: Track API changes in GLib.Signal.
	* glib/Signal.cs: AddEmissionHook binding (for closing #386950), and
	  change API of Emit to mimic the detailed_signal pattern.
	* glib/GType.cs: GType.FromName: new wrapper for native call.
	* glib/ObjectManager.cs: Use the new FromName managed method.

2008-05-08  Mike Kestner  <mkestner@novell.com>

	* atk/atk-api-2.12.raw: reparsed.
	* gdk/gdk-api-2.12.raw: reparsed.
	* gtk/gtk-api-2.12.raw: reparsed.
	* parser/gapi2xml.pl: fixes for signal and vm order needed for 
	proper interface struct layout. [Fixes #386802]

2008-05-07  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Object.custom: swap the event removing and destroy calls.

2008-05-07  Andres G. Aragoneses  <aaragoneses@novell.com>

	* atk/Object.custom, atk/glue/object.c: Remove unneeded
	return types (I don't  know why gcc ever let this compile...).

2008-05-06  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: revert the connection optimization from r102349.
	It breaks under the current CellRenderer implementation which probably
	can't be reworked compatibly to take advantage of this code.
	* glib/SignalClosure.cs: use IntPtr.ToInt64 instead of (long) since
	the cast apparently has issues on bleeding edge mono.

2008-05-06  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: mark Rc.DefaultFiles accessors as null_term_array.

2008-05-02  Mike Kestner  <mkestner@novell.com>

	* generator/GenerationInfo.cs:  refactor glue writer implementation
	so that GlueEnabled means there is a valid glue writer available.
	Avoids crashes in scenarios where an unwriteable glue path is provided
	to the generator.  Generate a glue function which scans the type
	hierarchy of an object for the most-derived unmanaged ancestor so
	that we can invoke class methods on it, avoiding infinite recursions.
	* generator/Signal.cs: revamp the default handler vm overriding 