@@ -7,12 +7,7 @@ is the 2.6 platform.
 Building & Installing Gtk#:
 ---------------------------
 
-    To compile Gtk# on Win32 using the .NET framework compiler and libraries,
-    in the top level directory, type:
-
-        make -f makefile.win32
-
-    The Linux build is the traditional:
+    The build is the traditional:
 
         ./configure
         make
