@@ -1,22 +1,0 @@
-GTK_CFLAGS=`pkg-config --cflags gtk+-win32-2.0 libglade-2.0`
-GTK_LIBS=`pkg-config --libs gtk+-win32-2.0 libglade-2.0`
-CC=gcc -mno-cygwin -mms-bitfields
-DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-symbols
-
-GLUE_OBJS = \
-	generated.o		\
-	win32dll.o
-
-all: atksharpglue-2.dll
-
-
-%.o: %.c
-	$(CC) -c $(CFLAGS) $(GTK_CFLAGS) -o $@ $^ 
-
-
-atksharpglue-2.dll: $(GLUE_OBJS)
-	$(DLLWRAP) --output-lib=libatksharpglue-2.a --dllname=atksharpglue-2.dll --driver-name=gcc --output-def=atksharpglue.def $(GLUE_OBJS) $(GTK_LIBS)
-
-
-clean:
-	rm -f atksharpglue-2.dll *.o libatksharpglue-2.a
