@@ -1,25 +1,0 @@
-ASSEMBLY=atk-sharp.dll
-APIS=atk-api.xml
-I_APIS=	
-
-all: windows
-
-windows: generated-stamp
-	$(CSC) /unsafe /nowarn:0660,0661 /target:library /r:../glib/glib-sharp.dll /r:../pango/pango-sharp.dll /out:$(ASSEMBLY) /recurse:*.cs
-	../gapi-cdecl-insert --keyfile=gtk-sharp.snk atk-sharp.dll
-
-generated-stamp: ../generator/codegen.exe atk-api.xml
-	../generator/codegen --generate $(APIS) --outdir=generated --customdir=. --assembly-name=atk-sharp --gluelib-name=atksharpglue --glue-filename=glue/generated.c && touch generated-stamp
-
-atk-api.xml: atk-api.raw Atk.metadata
-	cp atk-api.raw atk-api.xml
-	chmod u+w atk-api.xml
-	../parser/gapi-fixup.exe --api=atk-api.xml --metadata=Atk.metadata
-
-clean:
-	rm -f generated-stamp
-	rm -f $(ASSEMBLY)
-	rm -rf generated
-	rm -f glue/generated.c
-	rm -f atk-api.xml
-
