@@ -63,6 +63,6 @@ customs = 			\
 	WindowAttr.custom	\
 	Window.custom
 
-add_dist = makefile.win32
+add_dist = 
 
 include ../Makefile.include
