@@ -11,7 +11,6 @@ libgdksharpglue_2_la_SOURCES =	\
 nodist_libgdksharpglue_2_la_SOURCES = generated.c
 
 # Adding a new glue file?
-# Please remember to update makefile.win32
 
 libgdksharpglue_2_la_LDFLAGS = -module -avoid-version -no-undefined
 
@@ -24,4 +23,4 @@ libgdksharpglue.dll: $(libgdksharpglue_2_la_OBJECTS) libgdksharpglue.rc libgdksh
 
 CLEANFILES = lib*.a lib*.dll
 
-EXTRA_DIST = makefile.win32 win32dll.c
+EXTRA_DIST = win32dll.c
