@@ -1,26 +1,0 @@
-GTK_CFLAGS=`pkg-config --cflags gdk-win32-2.0`
-GTK_LIBS=`pkg-config --libs gdk-win32-2.0`
-CC=gcc -mno-cygwin -mms-bitfields
-DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-symbols
-
-GLUE_OBJS = \
-	dragcontext.o		\
-	device.o		\
-        event.o                 \
-	generated.o		\
-        selection.o             \
-	win32dll.o
-
-all: gdksharpglue-2.dll
-
-
-%.o: %.c
-	$(CC) -c $(CFLAGS) $(GTK_CFLAGS) -o $@ $^ 
-
-
-gdksharpglue-2.dll: $(GLUE_OBJS)
-	$(DLLWRAP) --output-lib=libgdksharpglue-2.a --dllname=gdksharpglue-2.dll --driver-name=gcc --output-def=gdksharpglue.def $(GLUE_OBJS) $(GTK_LIBS)
-
-
-clean:
-	rm -f gdksharpglue-2.dll *.o libgdksharpglue-2.a
