@@ -1,26 +1,0 @@
-ASSEMBLY=gdk-sharp.dll
-APIS=gdk-symbols.xml gdk-api.xml
-I_APIS=../atk/atk-api.xml ../pango/pango-api.xml
-
-all: windows
-
-windows: generated-stamp
-	$(CSC) /unsafe /nowarn:0660,0661 /target:library /r:System.Drawing.dll /r:../glib/glib-sharp.dll /r:../pango/pango-sharp.dll /r:../atk/atk-sharp.dll /out:$(ASSEMBLY) /recurse:*.cs
-	../gapi-cdecl-insert --keyfile=gtk-sharp.snk gdk-sharp.dll
-	cd glue && make -f makefile.win32
-
-generated-stamp: ../generator/codegen.exe $(APIS) $(I_APIS) *.custom
-	../generator/codegen --generate $(APIS) --include $(I_APIS) --outdir=generated --customdir=. --assembly-name=gdk-sharp --gluelib-name=gdksharpglue-2 --glue-filename=glue/generated.c --glue-includes=gdk/gdk.h && touch generated-stamp
-
-gdk-api.xml: gdk-api.raw Gdk.metadata
-	cp gdk-api.raw gdk-api.xml
-	chmod u+w gdk-api.xml
-	../parser/gapi-fixup.exe --api=gdk-api.xml --metadata=Gdk.metadata
-
-clean:
-	rm -f generated-stamp
-	rm -f $(ASSEMBLY)
-	rm -rf generated
-	rm -f gdk-api.xml
-	cd glue && make -f makefile.win32 clean
-
