@@ -1,8 +1,0 @@
-all: windows
-
-windows: *.cs
-	$(CSC) /unsafe /out:codegen.exe *.cs
-
-clean:
-	rm -f codegen.exe
-
