@@ -1,23 +1,0 @@
-GTK_CFLAGS=`pkg-config --cflags gtk+-win32-2.0 libglade-2.0`
-GTK_LIBS=`pkg-config --libs gtk+-win32-2.0 libglade-2.0`
-CC=gcc -mno-cygwin -mms-bitfields
-DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-symbols
-
-GLUE_OBJS = \
-	generated.o		\
-	gladexml.o              \
-	win32dll.o
-
-all: gladesharpglue-2.dll
-
-
-%.o: %.c
-	$(CC) -c $(CFLAGS) $(GTK_CFLAGS) -o $@ $^ 
-
-
-gladesharpglue-2.dll: $(GLUE_OBJS)
-	$(DLLWRAP) --output-lib=libgladesharpglue-2.a --dllname=gladesharpglue-2.dll --driver-name=gcc --output-def=gladesharpglue.def $(GLUE_OBJS) $(GTK_LIBS)
-
-
-clean:
-	rm -f gladesharpglue-2.dll *.o libgladesharpglue-2.a
