@@ -1,25 +1,0 @@
-ASSEMBLY=glade-sharp.dll
-APIS=glade-api.xml
-I_APIS=../atk/atk-api.xml ../pango/pango-api.xml ../gdk/gdk-api.xml ../gdk/gdk-symbols.xml ../gtk/gtk-api.xml ../gtk/gtk-symbols.xml
-
-all: windows
-
-windows: generated-stamp
-	$(CSC) /unsafe /nowarn:0660,0661 /target:library /r:../glib/glib-sharp.dll /r:../pango/pango-sharp.dll /r:../atk/atk-sharp.dll /r:../gdk/gdk-sharp.dll /r:../gtk/gtk-sharp.dll /out:$(ASSEMBLY) /recurse:*.cs
-	../gapi-cdecl-insert --keyfile=gtk-sharp.snk glade-sharp.dll
-	cd glue && make -f makefile.win32
-
-generated-stamp: ../generator/codegen.exe $(APIS) $(I_APIS) *.custom
-	../generator/codegen --generate $(APIS) --include $(I_APIS) --outdir=generated --customdir=. --assembly-name=glade-sharp --gluelib-name=gladesharpglue-2 --glue-filename=glue/generated.c --glue-includes=glade/glade.h,glade/glade-parser.h && touch generated-stamp
-
-glade-api.xml: glade-api.raw Glade.metadata
-	cp glade-api.raw glade-api.xml
-	chmod u+w glade-api.xml
-	../parser/gapi-fixup.exe --api=glade-api.xml --metadata=Glade.metadata
-
-clean:
-	rm -f generated-stamp
-	rm -f $(ASSEMBLY)
-	rm -rf generated
-	cd glue && make -f makefile.win32 clean
-
