@@ -1,30 +1,0 @@
-GTK_CFLAGS=`pkg-config --cflags gobject-2.0`
-GTK_LIBS=`pkg-config --libs gobject-2.0`
-CC=gcc -mno-cygwin -mms-bitfields
-DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-symbols
-
-GLUE_OBJS = \
-        error.o                 \
-        list.o                  \
-        object.o                \
-        slist.o                 \
-        type.o                  \
-        unichar.o               \
-        value.o                 \
-        valuearray.o            \
-				thread.o                \
-	win32dll.o
-
-all: glibsharpglue-2.dll
-
-
-%.o: %.c
-	$(CC) -c $(CFLAGS) $(GTK_CFLAGS) -o $@ $^ 
-
-
-glibsharpglue-2.dll: $(GLUE_OBJS)
-	$(DLLWRAP) --output-lib=libglibsharpglue-2.a --dllname=glibsharpglue-2.dll --driver-name=gcc --output-def=glibsharpglue-2.def $(GLUE_OBJS) $(GTK_LIBS)
-
-
-clean:
-	rm -f glibsharpglue-2.dll *.o libglibsharpglue-2.a
