@@ -1,10 +1,0 @@
-all: windows
-
-windows:
-	$(CSC) /unsafe /nowarn:0660,0661 /target:library /out:glib-sharp.dll /recurse:*.cs
-	../gapi-cdecl-insert --keyfile=gtk-sharp.snk glib-sharp.dll
-	cd glue && make -f makefile.win32
-
-clean:
-	rm -f glib-sharp.dll
-	cd glue && make -f makefile.win32 clean
