@@ -1,33 +1,0 @@
-GTK_CFLAGS=`pkg-config --cflags gtk+-win32-2.0 libglade-2.0`
-GTK_LIBS=`pkg-config --libs gtk+-win32-2.0 libglade-2.0`
-CC=gcc -mno-cygwin -mms-bitfields
-DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-symbols
-
-GLUE_OBJS = \
-        adjustment.o            \
-        cellrenderer.o          \
-        clipboard.o             \
-        colorseldialog.o        \
-        container.o             \
-	generated.o             \
-        nodestore.o             \
-        object.o                \
-        selectiondata.o         \
-        style.o                 \
-	targetlist.o		\
-        widget.o                \
-	win32dll.o
-
-all: gtksharpglue-2.dll
-
-
-%.o: %.c
-	$(CC) -c $(CFLAGS) $(GTK_CFLAGS) -o $@ $^ 
-
-
-gtksharpglue-2.dll: $(GLUE_OBJS)
-	$(DLLWRAP) --output-lib=libgtksharpglue-2.a --dllname=gtksharpglue-2.dll --driver-name=gcc --output-def=gtksharpglue-2.def $(GLUE_OBJS) $(GTK_LIBS)
-
-
-clean:
-	rm -f gtksharpglue-2.dll *.o libgtksharpglue-2.a
