@@ -1,10 +1,0 @@
-ASSEMBLY=gtk-dotnet.dll
-
-all: windows
-
-windows:
-	$(CSC) /unsafe /nowarn:0660,0661 /target:library /r:../glib/glib-sharp.dll /r:../pango/pango-sharp.dll /r:../atk/atk-sharp.dll /r:../gdk/gdk-sharp.dll /r:../gtk/gtk-sharp.dll /r:System.Drawing.dll /out:$(ASSEMBLY) /recurse:*.cs
-	../gapi-cdecl-insert --keyfile=gtk-sharp.snk gtk-dotnet.dll
-
-clean:
-	rm -f $(ASSEMBLY)
