@@ -1,37 +1,2 @@
-DIRS=generator parser glib pango atk gdk gtk glade gtkdotnet
-ROOT=/cygdrive/$(subst \,/,$(subst :\,/,$(SYSTEMROOT)))
-#pesky spaces - blame zbowling if this fails
-PROGFILES=`cygpath \`cygpath -m -s "$(PROGRAMFILES)"\``
-
-## --- C# Compiler ---
-## Mono v1.1.3
-#CSC=$(PROGFILES)/Mono-1.1.3/bin/mcs.bat /d:WIN32
-##.NET v1.1.4322
-CSC=$(ROOT)/microsoft.net/framework/v1.1.4322/csc.exe /d:WIN32
-
-## --- GACUTIL ---
-## .NET gacutil
-#GACUTIL=gacutil.exe
-## Mono gacutil
-GACUTIL=gacutil.bat
-
-
-all: windows
-
-windows:
-	for i in $(DIRS); do				\
-		(cp gtk-sharp.snk $$i; cd $$i; CSC="$(CSC)" make -f makefile.win32) || exit 1;\
-	done;
-
-clean:
-	for i in $(DIRS); do \
-		(cd $$i; make -f makefile.win32 clean) || exit 1;\
-	done;
-	`rm -r lib` 
-
-release: clean windows
-	`mkdir -p lib` 
-	find $(DIRS) -iname "*.dll" -exec cp \{\} lib \;
-
-gac: release
-	find -iname "*-sharp.dll" -exec $(GACUTIL) /i \{\} \;
+all: 
+	# makefile.win32 is no longer supported.  Use configure && make for the autotools build.
