@@ -51,7 +51,7 @@ customs =			\
 	TabArray.custom		\
 	Units.custom
 
-add_dist = makefile.win32
+add_dist =
 
 include ../Makefile.include
 
