@@ -7,7 +7,6 @@ libpangosharpglue_2_la_SOURCES =	\
 nodist_libpangosharpglue_2_la_SOURCES = generated.c
 
 # Adding a new glue file?
-# Please remember to update makefile.win32
 
 libpangosharpglue_2_la_LDFLAGS = -module -avoid-version -no-undefined
 
@@ -20,4 +19,4 @@ libpangosharpglue.dll: $(libpangosharpglue_2_la_OBJECTS) libpangosharpglue.rc li
 
 CLEANFILES = lib*.a lib*.dll
 
-EXTRA_DIST = makefile.win32 win32dll.c
+EXTRA_DIST = win32dll.c
