@@ -1,24 +1,0 @@
-PANGO_CFLAGS=`pkg-config --cflags gtk+-win32-2.0 libglade-2.0`
-PANGO_LIBS=`pkg-config --libs gtk+-win32-2.0 libglade-2.0`
-CC=gcc -mno-cygwin -mms-bitfields
-DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-symbols
-
-GLUE_OBJS = \
-	attribute.c	\
-        generated.o	\
-	units.o		\
-	win32dll.o
-
-all: pangosharpglue-2.dll
-
-
-%.o: %.c
-	$(CC) -c $(CFLAGS) $(PANGO_CFLAGS) -o $@ $^ 
-
-
-gtksharpglue-2.dll: $(GLUE_OBJS)
-	$(DLLWRAP) --output-lib=libpangosharpglue-2.a --dllname=pangosharpglue-2.dll --driver-name=gcc --output-def=pangosharpglue-2.def $(GLUE_OBJS) $(PANGO_LIBS)
-
-
-clean:
-	rm -f pangosharpglue-2.dll *.o libpangosharpglue-2.a
