@@ -1,25 +1,0 @@
-ASSEMBLY=pango-sharp.dll
-APIS=pango-api.xml
-I_APIS=
-
-all: windows
-
-windows: generated-stamp
-	$(CSC) /unsafe /nowarn:0660,0661 /target:library /r:../glib/glib-sharp.dll /out:$(ASSEMBLY) /recurse:*.cs
-	../gapi-cdecl-insert --keyfile=gtk-sharp.snk pango-sharp.dll
-
-generated-stamp: ../generator/codegen.exe $(APIS)
-	../generator/codegen --generate $(APIS) --outdir=generated --customdir=. --assembly-name=pango-sharp --gluelib-name=pangosharpglue-2 --glue-filename=glue/generated.c --glue-includes=pango/pango.h && touch generated-stamp
-
-pango-api.xml: pango-api.raw pango-symbols.xml Pango.metadata
-	cp pango-api.raw pango-api.xml
-	chmod u+w pango-api.xml
-	../parser/gapi-fixup.exe --api=pango-api.xml --metadata=Pango.metadata --symbols=pango-symbols.xml
-
-clean:
-	rm -f generated-stamp
-	rm -f $(ASSEMBLY)
-	rm -rf generated
-	rm -f pango-api.xml
-
-
