@@ -1,8 +1,0 @@
-all: windows
-
-windows: *.cs
-	$(CSC) /unsafe /out:gapi-fixup.exe gapi-fixup.cs
-
-clean:
-	rm -f gapi-fixup.exe
-
