@@ -1,14 +1,0 @@
-references = /r:../glib/glib-sharp.dll /r:../atk/atk-sharp.dll /r:../pango/pango-sharp.dll /r:../gdk/gdk-sharp.dll /r:../gtk/gtk-sharp.dll /r:../glade/glade-sharp.dll
-
-all: windows
-
-windows:
-	$(CSC) /unsafe /out:gtk-hello-world.exe $(references) HelloWorld.cs
-	$(CSC) /unsafe /out:button.exe $(references) ButtonApp.cs
-	$(CSC) /unsafe /out:menu.exe $(references) Menu.cs
-	$(CSC) /unsafe /out:glade-test.exe $(references) /resource:test.glade GladeTest.cs
-	$(CSC) /unsafe /out:glade-viewer.exe $(references) GladeViewer.cs
-
-docs:
-	@echo "No docs to make."
-
