@@ -1,3 +1,8 @@
+2008-05-15  Mike Kestner  <mkestner@novell.com>
+
+	* kill the makefile.win32 build system.  it has been unmaintained
+	for quite some time, replaced by the auto* build in cygwin.
+
 2008-05-14  Andres G. Aragoneses <aaragoneses@novell.com> 
 
 	* atk/Object.custom: Track API changes in GLib.Signal.
